--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@angular/core": "~9.1.0",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "^9.1.13",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "firebase": "^8.6.1",
     "ngx-toastr": "^14.0.0",
     "ngx-webstorage": "^7.0.1",
