--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ckeditor/ckeditor5-build-classic": "^27.1.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "firebase": "^8.6.1",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^14.0.0",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.5.4",
